sqlite connect sucess, need to add json key and submission into test response

--- a/test.ipynb
+++ b/test.ipynb
@@ -71,6 +71,27 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<sqlite3.Cursor at 0x103143260>"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "conn = sqlite3.connect('tests.db')\n",
+    "cur = conn.cursor()\n",
+    "read = \"SELECT * FROM test where subject=?;\"\n",
+    "cur.execute(read,('HAHAH',))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "output_type": "stream",
      "name": "stdout",
      "text": "(1, 'Test', '{\"0\": \"A\", \"1\": \"B\", \"2\": \"C\", \"3\": \"D\", \"4\": \"A\", \"5\": \"B\", \"6\": \"C\", \"7\": \"D\", \"8\": \"A\", \"9\": \"B\", \"10\": \"C\", \"11\": \"D\", \"12\": \"A\", \"13\": \"B\", \"14\": \"C\", \"15\": \"D\", \"16\": \"A\", \"17\": \"B\", \"18\": \"C\", \"19\": \"D\", \"20\": \"A\", \"21\": \"B\", \"22\": \"C\", \"23\": \"D\", \"24\": \"A\", \"25\": \"B\", \"26\": \"C\", \"27\": \"D\", \"28\": \"A\", \"29\": \"B\", \"30\": \"C\", \"31\": \"D\", \"32\": \"A\", \"33\": \"B\", \"34\": \"C\", \"35\": \"D\", \"36\": \"A\", \"37\": \"B\", \"38\": \"C\", \"39\": \"D\", \"40\": \"A\", \"41\": \"B\", \"42\": \"C\", \"43\": \"D\", \"44\": \"A\", \"45\": \"B\", \"46\": \"C\", \"47\": \"D\", \"48\": \"A\", \"49\": \"B\"}')\n"
