all done except pdf ocr feature

--- a/test.ipynb
+++ b/test.ipynb
@@ -26,7 +26,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "import os, sqlite3,json\n",
